spacing issue in hero section again set

--- a/Frontend/src/components/Home/Components/HeroSection/HeroSection.module.css
+++ b/Frontend/src/components/Home/Components/HeroSection/HeroSection.module.css
@@ -67,6 +67,7 @@
 .freshBerry {
   font-size: 2.3rem;
   font-weight: 700;
+  margin-top: -15px;
   font-family: "Quicksand", "Baloo 2", sans-serif;
 }
 
